Refactoring control of active Instances of new type ManageablePaintable